# TPFinalAyDAI

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
docs/: Algoritmos.mdk  CLI.mdk  ImplementacionAlgoritmos.mdk  Introduccion.mdk  informe.mdk
docs/anexo/: CompilacionProyecto.mdk
docs/anexo/tda/: Lista.mdk  Pila.mdk  Punto.mdk  RBTree.mdk  Segmento.mdk  Vector.mdk
src/cpp/: cli.cpp
src/native/cpp/: cli.cpp
src/native/cpp/cli/: constants.cpp  init_utils.cpp  logger_setup.cpp
src/native/cpp/include/algor/: AnySegmentsIntersect.hpp  Array.hpp  ClosestPairOfPoints.hpp  Comparator.hpp  JarvisMarch.hpp  List.hpp  Point.hpp  RBTree.hpp  Segment.hpp  Stack.hpp  Vector.hpp
src/native/cpp/include/algor/List_impl/: ConstIterator.hpp  Iterator.hpp  Node.hpp
src/native/cpp/include/algor/RBTree_impl/: Color.hpp  ConstIterator.hpp  DataNode.hpp  Iterator.hpp  Nil.hpp  Node.hpp
src/native/cpp/include/cli/: OutputWriter.hpp  constants.hpp  execute_algorithms.hpp  init_utils.hpp
src/native/cpp/include/file_loaders/: FileLoader.hpp  TestCasesLoader.hpp
src/native/cpp/include/logger/: Logger.hpp
src/native/cpp/include/logger/Logger_impl/: LogTypes.hpp  Message.hpp
src/native/cpp/include/test_cases/: TestCasesLoader.hpp
src/native/cpp/include/test_cases/TestCasesLoader_impl/: ParserShared.hpp  SolutionDirNames.hpp  SolutionParser.hpp  TestCaseParser.hpp
src/native/cpp/test_cases/TestCasesLoader_impl/: ParserShared.cpp
src/native/cpp/tests/: Test.hpp
src/native/cpp/tests/algor/: AnySegmentsIntersect.cpp  Array.cpp  GrahamScan.cpp  GrahamScan_JarvisMarch.cpp  List.cpp  TestsLoaderCommon.hpp
src/native/cpp/tests/impl/: tests.cpp
src/web/: index.html
src/web/js/: main.js
test_cases/GrahamScan/: Test1.txt
